--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,21 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+* {
+  font-family: 'Lato', sans-serif;
+}
+
+body,
+html {
+  height: 100%;
+  overflow: hidden;
+}
+
+body {
+  margin: 0;
+  background-color: #333;
+  height: 100%;
+  width: 100%;
+  box-sizing: border-box;
+}
